--- a/Yeni/index2.html
+++ b/Yeni/index2.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .display-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 20px;
+}
+.box-model-example{
+    border:3px solid orange;
+    padding: 20px;
+    margin: 10px;
+   
+}
+.inner-box{
+    padding: 10px;
+    margin: 5px;
+    background-color: lightblue;
+    border: 2px solid orange;
+}
+    </style>
 </head>
 <body>
+     <!-- örnek 1 -->
     <div class="container">
         <div class="row">
           <div class="col-6">1. Eleman</div>
@@ -19,6 +39,52 @@
           <div class="col-12">5. Eleman (Alt sırada, tam genişlik)</div>
         </div>
       </div>
-      
+
+      <!-- örnek2 -->
+      <div class="display-grid">
+        <div class="grid-item">
+  Grid Öğesi1
+        </div>
+        <div class="grid-item">
+  GridÖğesi2
+        </div>
+        <div class="grid-item">
+  GridÖğesi3
+        </div>
+      </div>
+      <hr>
+      <div class="position-container">
+          <div class="position-item">
+  Kesin konumlandırılmış öğe
+          </div>
+  
+      </div>
+      <hr>
+      <div class="box-model-example">
+  Box Model Örneği
+      </div>
+      <hr>
+      <div class="box-model-example">
+        <div class="display-grid"> 
+            <div class="grid-item">
+  <div class="inner-box col-md-6">
+  İç kutu
+  </div>
+</div>
+<div class="grid-item">
+  <div class="inner-box col-md-6">
+      İç kutu
+      </div>
+    </div>
+    </div>
+    
+      </div>
+
+      <!-- örnek3 -->
+      <div class="display-grid">
+        <div class="grid-item"> Grid Öğesi 1</div>
+        <div class="grid-item"> Grid Öğesi 2</div>
+
+</div>
 </body>
 </html>
