--- a/Yeni/index.html
+++ b/Yeni/index.html
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <a href="https://pixabay.com/tr/photos/k%C4%B1z-k%C4%B1rsal-b%C3%B6lge-yol-1807556/" target="_blank" ></a>
+            <a href="https://pixabay.com/tr/photos/k%C4%B1z-k%C4%B1rsal-b%C3%B6lge-yol-1807556/" target="_blank" >
             
             <img src="https://cdn.pixabay.com/photo/2016/11/08/05/39/girl-1807556_640.jpg" width="1700" height="200" alt="" class="carousel-image" >
             <div class="container">
