--- a/Yeni/hikayeEkle.html
+++ b/Yeni/hikayeEkle.html
@@ -13,7 +13,19 @@
 body{
     background:  #a0a0a0;
 }
-
+.btn{
+    background-color:rgb(105, 30, 174)  ;
+    color:black;
+  }
+  .btn:hover {
+    background-color:#2e0849;  /* Arka plan rengini belirle */
+    color: #ffffff;          /* Yazı rengini belirle */
+    transition: background-color 0.3s, color 0.3s; /* Geçiş animasyonu */
+  }
+  a {
+  color: rgb(105, 30, 174) ; /* Bağlantı rengi mor olacak */
+  text-decoration: none; /* Alt çizgiyi kaldırmak için (isteğe bağlı) */
+}
 </style>
 
 </head>
@@ -37,7 +49,7 @@ body{
             <div class="checkbox mb-3">
              
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Gönder</button>
+            <button class="w-100 btn btn-lg " type="submit">Gönder</button>
             <hr class="my-4">
             
             <p> Geri dönmek için: <a href="index.html">Ana Sayfa</a></p>
